{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 46,
  "lineage": "50d46214-d440-472c-419c-91b595b36525",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:201451849701:listener/net/sample-alb-ecs/658d14907db54259/90f7ff10d27c4099",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:201451849701:targetgroup/sample-ecs-tg/72b9322a2f044b90",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:201451849701:listener/net/sample-alb-ecs/658d14907db54259/90f7ff10d27c4099",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:201451849701:loadbalancer/net/sample-alb-ecs/658d14907db54259",
            "port": 3333,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.sample_target_group",
            "aws_lb.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "sample_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:201451849701:targetgroup/sample-ecs-tg/72b9322a2f044b90",
            "arn_suffix": "targetgroup/sample-ecs-tg/72b9322a2f044b90",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:201451849701:targetgroup/sample-ecs-tg/72b9322a2f044b90",
            "lambda_multi_value_headers_enabled": false,
            "name": "sample-ecs-tg",
            "port": 3333,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-045f73ed772f3758c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:201451849701:loadbalancer/net/sample-alb-ecs/658d14907db54259",
            "arn_suffix": "net/sample-alb-ecs/658d14907db54259",
            "dns_name": "sample-alb-ecs-658d14907db54259.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:201451849701:loadbalancer/net/sample-alb-ecs/658d14907db54259",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sample-alb-ecs",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023f5f2214906e8c6"
              },
              {
                "subnet_id": "subnet-05d27e43d1f07bc93"
              }
            ],
            "subnets": [
              "subnet-023f5f2214906e8c6",
              "subnet-05d27e43d1f07bc93"
            ],
            "vpc_id": "vpc-045f73ed772f3758c",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201451849701:security-group/sg-0db16c1526410271a",
            "description": "controls access to the application ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db16c1526410271a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-ecs-lbsg",
            "name_prefix": null,
            "owner_id": "201451849701",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-045f73ed772f3758c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample_application_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201451849701:security-group/sg-051a567cc1a7178bb",
            "description": "controls direct access to application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051a567cc1a7178bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db16c1526410271a"
                ],
                "self": false,
                "to_port": 3333
              }
            ],
            "name": "sample-ecs-appsg",
            "name_prefix": null,
            "owner_id": "201451849701",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-045f73ed772f3758c"
          },
          "dependencies": [
            "aws_security_group.sample_alb_sg"
          ]
        }
      ]
    }
  ]
}